Fix download shelf not being set hidden and VoiceOver not noticing that it's hidden.

Bug: 764816
Change-Id: If4737e1f144dab5134d91623ec5dc60fc98270b5